# gena

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/common/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakePresets.json  README.md
assets/common/cmake/: Cache.cmake  DynamicAnalysis.cmake  Hardening.cmake  NiceOutput.cmake  Setup.cmake  StaticAnalysis.cmake  TestCoverage.cmake  Warnings.cmake  cache.cmake  hardening.cmake  interprocedural-optimizations.cmake  setup.cmake  test-coverage.cmake
assets/common/scripts/: Text Document.txt
assets/common/tests/: CMakeLists.txt  myproject_test.cpp
assets/exe/: CMakeLists.txt
assets/exe/src/app/: CMakeLists.txt  mainwindow.hpp
assets/exe/src/app/ico/: app.rc
assets/exe/src/lib/: CMakeLists.txt  myproject.cpp  myproject.hpp
assets/lib/: CMakeLists.txt
assets/lib/examples/: example.cpp
assets/lib/include/: myproject.hpp
assets/lib/src/: CMakeLists.txt  myproject.cpp
assets/tests/Catch2/: CMakeLists.txt  test_myproject.cpp
assets/tests/QtTest/: CMakeLists.txt  test_myproject.cpp
assets/tests/googletest/: CMakeLists.txt  test_myproject.cpp
assets/type/executable/src/app/: CMakeLists.txt  main.cpp
assets/type/executable/src/lib/: myproject.cpp
assets/type/qmainwindow/: CMakeLists.txt
assets/type/qmainwindow/src/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
cmake/: DynamicAnalysis.cmake  Setup.cmake  StaticAnalysis.cmake  TestCoverage.cmake  Warnings.cmake  cache.cmake  hardening.cmake  interprocedural-optimizations.cmake  nice-output.cmake  setup.cmake  test-coverage.cmake
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/app/ico/: app.rc
src/lib/: CMakeLists.txt  file_editor.cpp  file_editor.hpp  generator.cpp  generator.hpp  options.hpp  options_validator.cpp  options_validator.hpp  replacements.cpp  replacements.hpp
tests/: CMakeLists.txt  RunTests.cmake  test_generator.cpp
tests/injected/: CMakeLists.txt
tests/integration/: CMakeLists.txt  RunTests.cmake  test_generator.cpp
tests/integration/injected/: CMakeLists.txt  Utility.cmake  buffer_overflow.cpp  non_virtual_destructor.cpp  unused_private_function.cpp
tests/unit/: CMakeLists.txt  test_file_editor.cpp  test_options_validator.cpp
